--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="all_items">
-        <div class="deleteall">delete all</div>
+<!--         <div class="deleteall">delete all</div> -->
         <!-- <div class="no_task_mes"> no task to show </div> -->
 <!-- ideal task ======-->
         <!-- <div class="item"> 
